# benchmarks_digital_signature_schemes

FAEST/faest_128f/: bench_faest.c
FAEST/faest_192f/: bench_faest.c
FAEST/faest_256f/: bench_faest.c
FAEST/faest_256s/: Makefile  bench_faest.c
FAEST/faest_em_192f/: bench_faest.c
FAEST/faest_em_192s/: Makefile  bench_faest.c
Mirath/mirath_tcith_1a_fast/: CMakeLists.txt  bench_mirath.c
Mirath/mirath_tcith_1a_short/: CMakeLists.txt  bench_mirath.c
Mirath/mirath_tcith_1b_fast/: CMakeLists.txt  bench_mirath.c
Mirath/mirath_tcith_1b_short/: CMakeLists.txt  bench_mirath.c
Mirath/mirath_tcith_3a_fast/: CMakeLists.txt
Mirath/mirath_tcith_3a_short/: CMakeLists.txt
Mirath/mirath_tcith_3b_fast/: CMakeLists.txt
Mirath/mirath_tcith_3b_short/: CMakeLists.txt  bench_mirath.c
Mirath/mirath_tcith_5a_fast/: CMakeLists.txt
Mirath/mirath_tcith_5a_short/: CMakeLists.txt
Mirath/mirath_tcith_5b_fast/: CMakeLists.txt
Mirath/mirath_tcith_5b_short/: CMakeLists.txt
